# tusdaots

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  alembic.ini  do_bulk.bash  docker-compose.yml  pyproject.toml  test_main.http
app/: db.py  main.py  routes.py  utils.py
app/base/: settings.py
app/repositories/: judicial_case_repository.py  protocols.py  register.py  user_repository.py
app/scrapers/: base.py
app/scrapers/judical_processes/: entities.py  models.py  service.py  use_case.py
app/users/: auth.py  entities.py  models.py  services.py  usecases.py
migrations/: env.py
migrations/versions/: 2691120e0960_migrations_initials.py  62aa9c65f8f5_.py  650f580e0fff_add_username_as_unique.py  7216cb3d9248_add_user_id_column.py  c9e0f7e5f4e3_.py  f59eb9f6977f_add_detail_table.py  fbad82eb9200_add_user_table.py
tests/: conftest.py  test_routes.py
tests/app/: test_routes.py
tests/app/repositories/: test_judicial_case_repository.py  test_user_repository.py
tests/app/users/: test_auth.py
tests/data/: data.json  detail.json
